change Java dirctory hirearchy